# wayper

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  TECHNICAL.md  devshell.toml  flake.nix  justfile  shader.wgsl
.github/workflows/: nix.yml
crates/wayper/: Cargo.toml
crates/wayper-launcher/: Cargo.toml
crates/wayper-launcher/src/: main.rs
crates/wayper-lib/: Cargo.toml
crates/wayper-lib/src/: config.rs  event_source.rs  lib.rs  socket.rs
crates/wayper-lib/src/utils/: output.rs  render_server.rs
crates/wayper-windows/: Cargo.toml
crates/wayper-windows/src/: config.rs  engine.rs  lib.rs  main.rs  player.rs  windows_host.rs
crates/wayper-windows/src/renderer/: image.wgsl  mod.rs  output.rs
crates/wayper/shaders/: image_scene.wgsl  shader.wgsl  sizing.wgsl
crates/wayper/src/: handlers.rs  main.rs  map.rs  metered_cache.rs  output.rs  render_server.rs  scene.rs  wallpaperhandler.rs  wayperctl.rs  wgpu_renderer.rs
crates/wayper/src/handlers/: compositor.rs  layer_shell.rs  output.rs  registry.rs  shm.rs  utils.rs
crates/wayperctl/: Cargo.toml
crates/winit-test/: Cargo.toml
crates/winit-test/src/: main.rs
nix/: README.md  hm-module.nix
samples/: test_config.toml  test_config.toml.old  windows_config.toml
src/: config.rs  lib.rs  main.rs  socket.rs  surface.rs  wallpaperhandler.rs  wayperctl.rs
src/utils/: map.rs  mod.rs  output.rs  render_server.rs
