[package]
name = "wayper-lib"
version.workspace = true
edition.workspace = true

[dependencies]
color-eyre.workspace = true
tracing.workspace = true
thiserror.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true

toml = "0.8"
calloop = { version = "*" }
