[package]
name = "wayper-lib"
version.workspace = true
edition.workspace = true

[dependencies]
calloop = { version = "0.13" }
clap.workspace = true
color-eyre.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
thiserror.workspace = true
toml = "0.8"
tracing.workspace = true

