[package]
name = "wayper-lib"
version.workspace = true
edition.workspace = true

[dependencies]
calloop = { version = "0.13" }
clap.workspace = true
clap_complete = { version = "4", features = ["unstable-dynamic"] }
color-eyre.workspace = true
rand = "0.8"
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
thiserror.workspace = true
toml = "0.8"
tracing.workspace = true

