[package]
name = "wayper-windows"
version.workspace = true
edition.workspace = true
default-run = "wayper-windows"

[dependencies]
clap.workspace = true
color-eyre.workspace = true
# tracing.workspace = true
# tracing-subscriber.workspace = true
ctrlc = { version = "3" }
dashmap = { version = "6" }
env_logger = { version = "0.11" }
image.workspace = true
log = { version = "0.4" }
pollster = { version = "0.4.0" }
raw-window-handle = { version = "0.6" }
strum.workspace = true
wgpu = { version = "28" }
windows = { version = "0.62", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_UI_Accessibility",
  "Win32_UI_WindowsAndMessaging"
] }
winit = { version = "0.30", features = ["rwh_06"] }
