[package]
name = "wayper"
version.workspace = true
edition.workspace = true
default-run = "wayper"

[[bin]]
name = "wayperctl"
path = "src/wayperctl.rs"

[dependencies]
color-eyre.workspace = true
smithay-client-toolkit.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
clap.workspace = true
image.workspace = true
strum.workspace = true

mime_guess = "2"
rand = "0.9"
timer = "0.2"
walkdir = "2"
shlex = "1"
dashmap = { version = "7.0.0-rc2" }
indexmap = {version = "2"}

wayper-lib = { path = "../wayper-lib" }

