[package]
name = "wayper"
version.workspace = true
edition.workspace = true
default-run = "wayper"

[[bin]]
name = "wayperctl"
path = "src/wayperctl.rs"

[dependencies]
clap.workspace = true
clap_complete = { version = "4", features = ["unstable-dynamic"] }
color-eyre.workspace = true
dashmap = { version = "7.0.0-rc2" }
image.workspace = true
indexmap = { version = "2" }
mime_guess = "2"
rand = "0.9"
shlex = "1"
smithay-client-toolkit.workspace = true
strum.workspace = true
timer = "0.2"
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
walkdir = "2"
wayper-lib = { path = "../wayper-lib" }

